--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@
   width: 1260px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
   gap: 20px;
 }
 
@@ -18,4 +19,17 @@
 
 .info-item {
 text-align: center;
+}
+
+.search-form {
+  text-align: center;
+  margin-top: 20px;  
+}
+.load-more {
+  /* display: flex; */
+  text-align: center;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  margin-top: 20px; 
+  margin-bottom: 20px;
 }
