--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,8 @@
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -15,10 +20,16 @@
 
 .info {
     display: flex;
+    
+}
+
+.gallery__item {
+  text-decoration: none;
 }
 
 .info-item {
 text-align: center;
+
 }
 
 .search-form {
@@ -32,4 +43,15 @@ text-align: center;
   /* margin-right: auto; */
   margin-top: 20px; 
   margin-bottom: 20px;
+}
+
+.gallery__image:hover {
+  transform: scale(1.03);
+}
+
+.gallery__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: transform var(--animation-duration) var(--timing-function);
 }
